--- a/artifacts/environment-setup/notebooks/2 AutoML Number of Customer Visit to Department.ipynb
+++ b/artifacts/environment-setup/notebooks/2 AutoML Number of Customer Visit to Department.ipynb
@@ -10729,9 +10729,9 @@
       "metadata": {},
       "source": [
         "%%pyspark\n",
-        "subscription_id='fef31e52-6ea1-46c7-9494-2b5901e9af2b'\n",
+        "subscription_id='#SUBSCRIPTION_ID#'\n",
         "resource_group='Synapse-WWI-Lab'\n",
-        "workspace_name='amlworkspacedaron12'\n",
+        "workspace_name='#AML_WORKSPACE_NAME#'\n",
         "ws = Workspace(subscription_id = subscription_id, resource_group = resource_group, workspace_name = workspace_name)\n",
         "ws.write_config()\n",
         "ws = Workspace.from_config()\n",
