DataLakeName Dynamic in Campaign Analtics Data Prep Notebook Closes #31

--- a/CDP-Retail/artifacts/environment-setup/notebooks/3 Campaign Analytics Data Prep.ipynb
+++ b/CDP-Retail/artifacts/environment-setup/notebooks/3 Campaign Analytics Data Prep.ipynb
@@ -33,7 +33,7 @@
       "metadata": {},
       "source": [
         "%%pyspark\n",
-        "data_path = spark.read.load('abfss://marketingdb-staging@labworkspace123654.dfs.core.windows.net/CampaignAnalytics.csv', format='csv'\n",
+        "data_path = spark.read.load('abfss://marketingdb-staging@#DATA_LAKE_NAME#.dfs.core.windows.net/CampaignAnalytics.csv', format='csv'\n",
         ", header=True \n",
         ")\n",
         "data_path.show(10)"
@@ -163,7 +163,7 @@
         " .mode(\"overwrite\")\n",
         " .option(\"header\", \"true\")\n",
         " .format(\"com.databricks.spark.csv\")\n",
-        " .save('abfss://processed-campaigndata@labworkspace123654.dfs.core.windows.net/campaigndata'))"
+        " .save('abfss://processed-campaigndata@#DATA_LAKE_NAME#.dfs.core.windows.net/campaigndata'))"
       ],
       "attachments": {}
     }
