AutoML Number of Customer Visit to Department to include dynamic resource group name

--- a/CDP-Retail/artifacts/environment-setup/notebooks/2 AutoML Number of Customer Visit to Department.ipynb
+++ b/CDP-Retail/artifacts/environment-setup/notebooks/2 AutoML Number of Customer Visit to Department.ipynb
@@ -483,7 +483,7 @@
       "source": [
         "%%pyspark\n",
         "subscription_id='#SUBSCRIPTION_ID#'\n",
-        "resource_group='Synapse-WWI-Lab'\n",
+        "resource_group='#RESOURCE_GROUP_NAME#'\n",
         "workspace_name='#AML_WORKSPACE_NAME#'\n",
         "ws = Workspace(subscription_id = subscription_id, resource_group = resource_group, workspace_name = workspace_name)\n",
         "ws.write_config()\n",
