Updated WITH_HTAP notebook cosmos container

--- a/Manufacturing/automation/artifacts/notebooks/13 MFG_WITH_HTAP.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/13 MFG_WITH_HTAP.ipynb
@@ -114,7 +114,7 @@
         "df_ProductionPerformance = spark.read\\\n",
         "    .format(\"cosmos.olap\")\\\n",
         "    .option(\"spark.synapse.linkedService\", \"#COSMOS_LINKED_SERVICE#\")\\\n",
-        "    .option(\"spark.cosmos.container\", \"mfg-quality\")\\\n",
+        "    .option(\"spark.cosmos.container\", \"mfg-mes-quality1\")\\\n",
         "    .load()"
       ],
       "attachments": {}
