Aml notebooks config values updated.

--- a/Manufacturing/automation/artifacts/amlnotebooks/3a Hard Hat Detection using Azure Custom Vision.ipynb
+++ b/Manufacturing/automation/artifacts/amlnotebooks/3a Hard Hat Detection using Azure Custom Vision.ipynb
@@ -180,10 +180,10 @@
    "source": [
     "# web service end-point for the Custom Vision model    \n",
     "# we will process video frames (which are images)   \n",
-    "POST_URL = config.POST_URL\n",
+    "POST_URL = config.HARD_HAT_POST_URL\n",
     "print(POST_URL)\n",
     "# providing prediction key\n",
-    "HEADERS = config.HEADERS\n",
+    "HEADERS = config.HARD_HAT_HEADERS\n",
     "print(HEADERS)\n",
     "\n",
     "# number of API calls per pool of request   \n",
