updated notebooks in aml

--- a/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
@@ -54,8 +54,8 @@
       "source": [
         "# Create local directories if they don't exist\n",
         "# *mfg_source* contains all the pdf files to be converted to json\n",
-        "if (not os.path.isdir(os.getcwd()+\"/form-dataset\")):\n",
-        "    os.makedirs(os.getcwd()+\"/form-dataset\")\n",
+        "if (not os.path.isdir(os.getcwd()+\"/form-datasets\")):\n",
+        "    os.makedirs(os.getcwd()+\"/form-datasets\")\n",
         "# *formrecogoutput* will contain all the converted json files\n",
         "if (not os.path.isdir(os.getcwd()+\"/formrecogoutput\")):\n",
         "    os.makedirs(os.getcwd()+\"/formrecogoutput\")"
@@ -80,19 +80,19 @@
       "metadata": {},
       "source": [
         "%%time\n",
-        "# Downloading pdf files from a container named *form-dataset* to a local folder *form-dataset**\n",
+        "# Downloading pdf files from a container named *form-datasets* to a local folder *form-datasets**\n",
         "# Set up configs for blob storage\n",
         "STORAGE_ACCOUNT_NAME = \"#STORAGE_ACCOUNT_NAME#\"\n",
         "STORAGE_ACCOUNT_ACCESS_KEY = \"#STORAGE_ACCOUNT_KEY#\"\n",
-        "STORAGE_CONTAINER_NAME = \"form-dataset\"\n",
+        "STORAGE_CONTAINER_NAME = \"form-datasets\"\n",
         "\n",
         "# Instantiating a blob service object\n",
         "blob_service = BlockBlobService(STORAGE_ACCOUNT_NAME, STORAGE_ACCOUNT_ACCESS_KEY) \n",
         "\n",
         "blobs = blob_service.list_blobs(STORAGE_CONTAINER_NAME)\n",
-        "# Downloading pdf files from the container *form-dataset** and storing them locally to *form-dataset** folder\n",
+        "# Downloading pdf files from the container *form-datasets** and storing them locally to *form-datasets** folder\n",
         "for blob in blobs:\n",
-        "    # Check if the blob.name is already present in the folder form-dataset*. If yes then continue\n",
+        "    # Check if the blob.name is already present in the folder form-datasets*. If yes then continue\n",
         "    try:\n",
         "        with open('merged_log','rb') as f:\n",
         "            merged_files = pickle.load(f)\n",
@@ -101,7 +101,7 @@
         "    # If file is already processed then continue to next file\n",
         "    if (blob.name in merged_files): \n",
         "        continue\n",
-        "    download_file_path = os.path.join(os.getcwd(), \"form-dataset\", blob.name)\n",
+        "    download_file_path = os.path.join(os.getcwd(), \"form-datasets\", blob.name)\n",
         "    blob_service.get_blob_to_path(STORAGE_CONTAINER_NAME, blob.name ,download_file_path)\n",
         "    merged_files.add(blob.name)\n",
         "    # Keep trace of all the processed files at the end of your script (to keep track later)\n",
@@ -117,7 +117,7 @@
       "metadata": {},
       "source": [
         "# Total number of forms to be converted to JSON\n",
-        "files = [f for f in listdir(os.getcwd()+\"/form-dataset\") if isfile(join(os.getcwd()+\"/form-dataset\", f))]\n",
+        "files = [f for f in listdir(os.getcwd()+\"/form-datasets\") if isfile(join(os.getcwd()+\"/form-datasets\", f))]\n",
         "len(files)"
       ],
       "attachments": {}
@@ -150,11 +150,11 @@
         "# This model is the one trained on 5 forms\n",
         "model_id = \"0986b966-c6ae-4b9c-8eec-4db9bb846eac\"\n",
         "post_url = endpoint + r\"/formrecognizer/v2.0/custom/models/%s/analyze\" % model_id\n",
-        "files = [f for f in listdir(os.getcwd()+\"/form-dataset\") if isfile(join(os.getcwd()+\"/form-dataset\", f))]\n",
+        "files = [f for f in listdir(os.getcwd()+\"/form-datasets\") if isfile(join(os.getcwd()+\"/form-datasets\", f))]\n",
         "params = {\"includeTextDetails\": True}\n",
         "headers = {'Content-Type': 'application/pdf', 'Ocp-Apim-Subscription-Key': apim_key}\n",
         "\n",
-        "local_path = os.path.join(os.getcwd(), \"form-dataset//\")\n",
+        "local_path = os.path.join(os.getcwd(), \"form-datasets//\")\n",
         "output_path = os.path.join(os.getcwd(), \"formrecogoutput//\")\n",
         "\n",
         "for file in files:\n",
