token replacements added

--- a/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
@@ -144,11 +144,11 @@
         "%%time\n",
         "# Endpoint parameters for querying the custom trained form-recognizer model to return the processed JSON\n",
         "# Processes PDF files one by one and return CLEAN JSON files\n",
-        "endpoint = r\"https://westus2.api.cognitive.microsoft.com/\"\n",
+        "endpoint = r\"https://#LOCATION#.api.cognitive.microsoft.com/\"\n",
         "# Change if api key is expired\n",
-        "apim_key = \"1d6a7980b0a84bc9b040a1196436675e\"\n",
+        "apim_key = \"#APIM_KEY#\"\n",
         "# This model is the one trained on 5 forms\n",
-        "model_id = \"0986b966-c6ae-4b9c-8eec-4db9bb846eac\"\n",
+        "model_id = \"#MODEL_ID#\"\n",
         "post_url = endpoint + r\"/formrecognizer/v2.0/custom/models/%s/analyze\" % model_id\n",
         "files = [f for f in listdir(os.getcwd()+\"/form-datasets\") if isfile(join(os.getcwd()+\"/form-datasets\", f))]\n",
         "params = {\"includeTextDetails\": True}\n",
@@ -205,7 +205,7 @@
         "                        key = i.replace(\" \", \"_\")\n",
         "                        new_dict[key] = None\n",
         "                # Appending form url to json\n",
-        "                new_dict['form_url'] = 'https://dreamdemostrggen2pocrs11.blob.core.windows.net/formupload/' + file \n",
+        "                new_dict['form_url'] = 'https://dreamdemostrggen2pocrs11.blob.core.windows.net/form-datasets/' + file \n",
         "                with open(output_path+file[:-4]+\".json\", 'w') as outfile:\n",
         "                    json.dump(new_dict, outfile)\n",
         "                # Change the encoding of file in case of spanish forms. It will detected random characters\n",
