--- a/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
@@ -1,9 +1,9 @@
 {
   "metadata": {
-    "saveOutput": true,
     "language_info": {
       "name": "python"
-    }
+    },
+    "sessionKeepAliveTimeout": 30
   },
   "nbformat": 4,
   "nbformat_minor": 2,
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [],
       "metadata": {},
       "source": [
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [],
       "metadata": {},
       "source": [
@@ -74,13 +74,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
+          "execution_count": 6,
           "output_type": "execute_result",
-          "execution_count": 9,
           "data": {
-            "text/plain": "CPU times: user 61.3 ms, sys: 4.19 ms, total: 65.5 ms\nWall time: 260 ms"
+            "text/plain": "CPU times: user 46.9 ms, sys: 3.82 ms, total: 50.7 ms\nWall time: 269 ms"
           },
           "metadata": {}
         }
@@ -122,13 +122,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
+          "execution_count": 7,
           "output_type": "execute_result",
-          "execution_count": 10,
           "data": {
-            "text/plain": "7"
+            "text/plain": "5"
           },
           "metadata": {}
         }
@@ -156,13 +156,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
+          "execution_count": 8,
           "output_type": "execute_result",
-          "execution_count": 16,
           "data": {
-            "text/plain": "POST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/35392b7f-3504-4baf-b7c6-ce60315ee798/analyzeresults/b4cfc2aa-6b1f-43a7-b504-86741aa6810b', 'x-envoy-upstream-service-time': '77', 'apim-request-id': 'ed129c64-6cff-422b-99a0-c375105a7695', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Thu, 17 Sep 2020 13:49:17 GMT'}\nAnalysis succeeded:\n202045061\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/35392b7f-3504-4baf-b7c6-ce60315ee798/analyzeresults/91b7c8fe-2b49-4faf-bd02-6bad7e3689c7', 'x-envoy-upstream-service-time': '97', 'apim-request-id': '6a324cf5-8f9e-4238-a87c-539d0fad7860', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Thu, 17 Sep 2020 13:49:33 GMT'}\nAnalysis succeeded:\n202045016\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/35392b7f-3504-4baf-b7c6-ce60315ee798/analyzeresults/12c5d988-8cf6-4b51-9cce-77685255e354', 'x-envoy-upstream-service-time': '88', 'apim-request-id': 'a57f0545-294b-4d9a-8b50-26ff25f8c76a', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Thu, 17 Sep 2020 13:49:48 GMT'}\nAnalysis succeeded:\n202045001\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/35392b7f-3504-4baf-b7c6-ce60315ee798/analyzeresults/d596df4f-c7ff-42e6-9fd6-820d0508ad98', 'x-envoy-upstream-service-time': '107', 'apim-request-id': '3f678604-b1bf-474c-8abe-0fb6cc07a045', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Thu, 17 Sep 2020 13:50:03 GMT'}\nAnalysis succeeded:\n202045060\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/35392b7f-3504-4baf-b7c6-ce60315ee798/analyzeresults/2e091fb9-cf40-40a4-828e-6383e284360c', 'x-envoy-upstream-service-time': '86', 'apim-request-id': '1eddb6ef-613c-47d2-845c-73796972e2ab', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Thu, 17 Sep 2020 13:50:18 GMT'}\nAnalysis succeeded:\n202045005\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/35392b7f-3504-4baf-b7c6-ce60315ee798/analyzeresults/75c213f2-0c45-42c9-8260-03db8998bee2', 'x-envoy-upstream-service-time': '148', 'apim-request-id': '4af472de-95f1-4518-9a6d-0aff19453db1', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Thu, 17 Sep 2020 13:50:35 GMT'}\nAnalysis succeeded:\n202045000\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/35392b7f-3504-4baf-b7c6-ce60315ee798/analyzeresults/f0443609-8e23-456d-86a2-273395a0f0f8', 'x-envoy-upstream-service-time': '82', 'apim-request-id': 'af2b0f93-72e6-4fa6-abc7-b91dbea545ea', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Thu, 17 Sep 2020 13:50:50 GMT'}\nAnalysis succeeded:\n202045020\nCPU times: user 505 ms, sys: 43.8 ms, total: 549 ms\nWall time: 1min 47s"
+            "text/plain": "POST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/313c2338-3876-448d-9c1f-fb5cc0bfd1b8', 'x-envoy-upstream-service-time': '73', 'apim-request-id': 'f4dd6609-053c-4c4e-974a-8759be0bfe1e', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:55:38 GMT'}\nAnalysis succeeded:\n202045001\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/bbcf976b-8ebc-42b4-82ff-1e4a2a303553', 'x-envoy-upstream-service-time': '54', 'apim-request-id': 'eb874040-6550-4e8b-8da0-d919bf68d38e', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:55:53 GMT'}\nAnalysis succeeded:\n202045000\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/4e22ec84-0e26-4a49-9ab2-ec5b757b784c', 'x-envoy-upstream-service-time': '64', 'apim-request-id': 'fb12b626-50bd-429f-ab6f-5a671fd70660', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:56:08 GMT'}\nAnalysis succeeded:\n202045020\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/11b6c739-2257-47e0-b83f-fb4fd6e29c39', 'x-envoy-upstream-service-time': '63', 'apim-request-id': 'd00baf52-54fd-4805-bd85-1bde1dfd2dda', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:56:23 GMT'}\nAnalysis succeeded:\n202045016\nPOST analyze succeeded:\n{'Content-Length': '0', 'Operation-Location': 'https://westus2.api.cognitive.microsoft.com/formrecognizer/v2.0/custom/models/543aa8a8-639f-436d-bc0a-eecf12d99f81/analyzeresults/8f8df90d-ad1c-4dc2-9564-e72c5979a078', 'x-envoy-upstream-service-time': '67', 'apim-request-id': 'c0fed919-6529-4953-a1d0-b86cf1085258', 'Strict-Transport-Security': 'max-age=31536000; includeSubDomains; preload', 'x-content-type-options': 'nosniff', 'Date': 'Fri, 18 Sep 2020 14:56:39 GMT'}\nAnalysis succeeded:\n202045005\nCPU times: user 398 ms, sys: 7.79 ms, total: 406 ms\nWall time: 1min 16s"
           },
           "metadata": {}
         }
@@ -181,8 +181,8 @@
         "params = {\"includeTextDetails\": True}\n",
         "headers = {'Content-Type': 'application/pdf', 'Ocp-Apim-Subscription-Key': apim_key}\n",
         "\n",
-        "local_path = os.path.join(os.getcwd(), \"form-datasets\")\n",
-        "output_path = os.path.join(os.getcwd(), \"formrecogoutput\")\n",
+        "local_path = os.path.join(os.getcwd(), \"form-datasets//\")\n",
+        "output_path = os.path.join(os.getcwd(), \"formrecogoutput//\")\n",
         "files = [f for f in listdir(local_path) if isfile(join(local_path, f))]\n",
         "\n",
         "for file in files:\n",
@@ -272,13 +272,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
+          "execution_count": 9,
           "output_type": "execute_result",
-          "execution_count": 18,
           "data": {
-            "text/plain": "7"
+            "text/plain": "5"
           },
           "metadata": {}
         }
@@ -293,13 +293,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
+          "execution_count": 10,
           "output_type": "execute_result",
-          "execution_count": 19,
           "data": {
-            "text/plain": "CPU times: user 370 us, sys: 0 ns, total: 370 us\nWall time: 381 us"
+            "text/plain": "CPU times: user 294 us, sys: 47 us, total: 341 us\nWall time: 350 us"
           },
           "metadata": {}
         }
@@ -320,13 +320,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
+          "execution_count": 11,
           "output_type": "execute_result",
-          "execution_count": 20,
           "data": {
-            "text/plain": "/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600347701065_0004/container_1600347701065_0004_01_000001/formrecogoutput\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600347701065_0004/container_1600347701065_0004_01_000001/formrecogoutput/202045001.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600347701065_0004/container_1600347701065_0004_01_000001/formrecogoutput/202045000.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600347701065_0004/container_1600347701065_0004_01_000001/formrecogoutput/202045060.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600347701065_0004/container_1600347701065_0004_01_000001/formrecogoutput/202045020.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600347701065_0004/container_1600347701065_0004_01_000001/formrecogoutput/202045061.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600347701065_0004/container_1600347701065_0004_01_000001/formrecogoutput/202045016.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600347701065_0004/container_1600347701065_0004_01_000001/formrecogoutput/202045005.json\nCPU times: user 41.4 ms, sys: 4.18 ms, total: 45.6 ms\nWall time: 343 ms"
+            "text/plain": "/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045001.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045016.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045000.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045005.json\n/mnt/var/hadoop/tmp/nm-local-dir/usercache/trusted-service-user/appcache/application_1600429513143_0014/container_1600429513143_0014_01_000001/formrecogoutput/202045020.json\nCPU times: user 33 ms, sys: 0 ns, total: 33 ms\nWall time: 232 ms"
           },
           "metadata": {}
         }
@@ -345,10 +345,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [],
       "metadata": {},
-      "source": [],
+      "source": [
+        ""
+      ],
       "attachments": {}
     }
   ]
