Updated English-forms notebook

--- a/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
+++ b/Manufacturing/automation/artifacts/notebooks/English-forms.ipynb
@@ -87,7 +87,7 @@
       ],
       "metadata": {},
       "source": [
-        "%%time\n",
+        "# %%time\n",
         "# Downloading pdf files from a container named *form-dataset* to a local folder *form-dataset**\n",
         "# Set up configs for blob storage\n",
         "STORAGE_ACCOUNT_NAME = \"#STORAGE_ACCOUNT_NAME#\"\n",
@@ -169,7 +169,7 @@
       ],
       "metadata": {},
       "source": [
-        "%%time\n",
+        "# %%time\n",
         "# Endpoint parameters for querying the custom trained form-recognizer model to return the processed JSON\n",
         "# Processes PDF files one by one and return CLEAN JSON files\n",
         "endpoint = r\"https://#LOCATION#.api.cognitive.microsoft.com/\"\n",
@@ -306,7 +306,7 @@
       ],
       "metadata": {},
       "source": [
-        "%%time\n",
+        "# %%time\n",
         "# Connect to the container for uploading the JSON files\n",
         "# Set up configs for blob storage\n",
         "STORAGE_ACCOUNT_NAME = \"#STORAGE_ACCOUNT_NAME#\"\n",
@@ -333,7 +333,7 @@
       ],
       "metadata": {},
       "source": [
-        "%%time\n",
+        "# %%time\n",
         "# Upload JSON files from local folder *formrecogoutput* to the container *formrecogoutput*\n",
         "local_path = os.path.join(os.getcwd(), \"formrecogoutput\")\n",
         "print(local_path)\n",
